# schedule_touban

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: todo.txt
notebook/: trial.ipynb
src/: const.py  index.py  main.py  optimize.py  test.py  upload_data.py  utils.py
