[tool.poetry]
name = "schedule-touban"
version = "0.1.0"
description = ""
authors = ["chryshr <c.y0sh1hara.jp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
polars = "^1.20.0"
pulp = "^2.9.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
